tests/errors/test_struct_array_view_overflow_error.mob
struct RGBA packed {
    union {
        rgba: uint32
        bytes: uint8[4]
        struct {
            r: uint8
            g: uint8
            b: uint8
            a: uint8
        }
    }
}

var buf = buffer_create(RGBA.size)
var views = buf:array_view_as(RGBA, 0, 18446744073709551615)
